--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "manifest_version": 3,
   "name": "Fengj",
   "version": "1.0",
-  "permissions": ["activeTab"],
+  "permissions": ["scripting", "activeTab"],
   "background": {
     "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "popup.html",
+
     "default_icon": {
       "16": "images/icon14.png",
       "48": "images/icon14.png",
